Blank/syntax error problems fixed

--- a/app/views/pairwise_comparisons/_about.html.erb
+++ b/app/views/pairwise_comparisons/_about.html.erb
@@ -1,12 +1,12 @@
 <div class = "contain_1" style = "display:block">
 <h1 style = "margin-left:10%;color:#3d6ab1" >About</h1>
 <hr id = "hhr">
-<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:22pt;font-weight:normal;" > 
+<p style = "margin-left:10%;color:black;width:80%;font-size:1.5em;line-height:22pt;font-weight:normal;" >
 Thank you for participating in this research opportunity! We greatly appreciate you taking time out
- of your schedule to help us better understand your perspective behind the wheel. Before we move on 
- to the questions regarding your experiences with your company’s algorithm, we would like to know more 
+ of your schedule to help us better understand your perspective behind the wheel. Before we move on
+ to the questions regarding your experiences with your company’s algorithm, we would like to know more
  you and your time working for your company(s). Please answer each question below thoroughly and truthfully.
- For more open-ended questions, please do not reveal any private or personally identifiable information about 
+ For more open-ended questions, please do not reveal any private or personally identifiable information about
  yourself or others in your answers.
 </p>
 <br> <br>
@@ -57,7 +57,7 @@ Thank you for participating in this research opportunity! We greatly appreciate 
      type: "post",
      success: function(){
        console.log('Saved Successfully');
-       //window.location.href = "/pairwise_comparisons"
+       window.location.href = "/pairwise_comparisons/new"
      },
      error:function($xhr){
        console.log($xhr);
