--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -122,7 +122,7 @@ a:hover
 }
 
 .modal-hr {
-  margin-left: -24px; 
+  margin-left: -24px;
   margin-right: -24px;
 }
 
@@ -164,3 +164,9 @@ a:hover
    margin-top:-1%;
    float:right;
  }
+
+.error-1-style {
+  color:red;
+  margin-top:-1%;
+  display:none;
+}
