--- a/app/views/pairwise_comparisons/_continuous_company_add.html.erb
+++ b/app/views/pairwise_comparisons/_continuous_company_add.html.erb
@@ -54,7 +54,7 @@
     <p class="feature-label"> Is this information about the request, or the driver? </p>
     <p>
       <label for="request-option">
-        <input id="request-option" class="with-gap" type="radio" name="range-groupp">
+        <input id="request-option" class="with-gap" type="radio" name="range-group9">
         <span style = "color:black; font-size:1.3em;">Request
           <br>
           <span style="color: #808080;">ex. Average amount of tips the customer gives.</span>
@@ -64,7 +64,7 @@
 
     <p>
       <label for="driver-option">
-        <input id="driver-option" class="with-gap" type="radio" name="range-groupp">
+        <input id="driver-option" class="with-gap" type="radio" name="range-group9">
         <span style = "color:black; font-size:1.3em;">Driver
           <br>
           <span style="color: #808080;">ex. Driver's earning today.</span>
@@ -127,16 +127,6 @@
 
   $('#percentage').click(function() {
     numeric_elem.style = "display: none";
-
-  });
-
-  $('#driver-option').click(function() {
-    console.log("HERE!!");
-
-  });
-
-  $('#request-option').click(function() {
-    console.log("HERE!!");
 
   });
 
