styled about page to match pdf

--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -108,6 +108,7 @@ a:hover
   margin-top:5%;
   margin-left:9%;
   font-weight: bold;
+  line-height:1.25;
   color: white;
   font-family: "Helvetica Neue bold", sans-serif;
 }
