--- a/app/assets/stylesheets/abouts.scss
+++ b/app/assets/stylesheets/abouts.scss
@@ -1,3 +1,49 @@
 // Place all the styles related to the abouts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.title {
+  margin-left:10%;
+  color:#3d6ab1;
+  font-family: "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.about-text {
+  margin-left:10%;
+  width:80%;
+  font-size:23px;
+  font-weight:400;
+  line-height:1.5;
+  font-family: "Helvetica Neue", sans-serif;
+  color: #636363;
+}
+
+.about-hr {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+#about_form {
+  display:block;
+  margin-left:10%;
+  width:80%;
+  margin-top: -25px;
+}
+
+.subheader {
+  font-weight:bold;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-family: "Helvetica Neue", sans-serif;
+}
+
+.question {
+  font-size:23px;
+  font-weight:350;
+  line-height:1.35;
+  font-family: "Helvetica Neue", sans-serif;
+  color: #636363;
+  margin-bottom: 20px;
+}
