showing weights on thank you page

--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,1 +1,7 @@
 <p style = "margin-left:30%;margin-top:10%;"> Thank-you for your participation </p>
+
+<h2>For CMU research:</h2>
+<p>Individual</p>
+<%= @individual_weights %>
+<p>Social</p>
+<%= @social_weights %>
