--- a/app/views/pairwise_comparisons/_about.html.erb
+++ b/app/views/pairwise_comparisons/_about.html.erb
@@ -13,29 +13,29 @@ Thank you for participating in this research opportunity! We greatly appreciate 
 <form action="#" id = "about_form" style = "display:block;margin-left:10%;width:80%;">
   <h5  style = "font-weight:bold"> Work Experience</h5> <br/>
   <label for = "which" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Which companies have you worked for? </label>
-  <input id = "which" type="text" name="lower" value="" placeholder="Uber, lyft, postmates" required> <br> <br>
+  <input id = "which" type="text" name="lower" value="" placeholder="Uber, lyft, postmates" class="about-question"> <br> <br>
 
   <label for = "long" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> How long have you worked for these companies? </label>
-  <input id = "long" type="text" name="upper" value="" placeholder="2 years" required> <br> <br>
+  <input id = "long" type="text" name="upper" value="" placeholder="2 years" class="about-question"> <br> <br>
 
   <label for = "service" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Is this service your main source of income or a side gig? </label>
-  <input id = "service" type="text" name="upper" value="" placeholder="2 years" required><br> <br>
+  <input id = "service" type="text" name="upper" value="" placeholder="2 years" class="about-question"><br> <br>
 
   <label for = "actively" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Are you still actively driving for your companies? </label>
-  <input id = "actively" type="text" name="upper" value="" placeholder="2 years" required><br> <br>
+  <input id = "actively" type="text" name="upper" value="" placeholder="2 years" class="about-question"><br> <br>
 
   <label for = "deactivated" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Have you ever been deactivated from any of your selected companies? If so, why? </label>
-  <input id = "deactivated" type="text" name="upper" value="" placeholder="2 years" required> <br> <br>
+  <input id = "deactivated" type="text" name="upper" value="" placeholder="2 years" class="about-question"> <br> <br>
 
 
   <h5 style = "font-weight:bold"> Algortithmic Experience</h5> <br/>
 
 
   <label for = "pending" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Can you describe how your company’s algorithm matches you with pending requests? </label>
-  <input id = "pending" type="text" name="upper" value="" placeholder="Uber, lyft, postmates" required> <br> <br>
+  <input id = "pending" type="text" name="upper" value="" placeholder="Uber, lyft, postmates" class="about-question"> <br> <br>
 
   <label for = "satisfied" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Are you satisfied with your company’s matching algorithm? Why or why not? </label>
-  <input id = "satisfied" type="text" name="upper" value="" placeholder="Uber, lyft, postmates" required> <br> <br> <br>
+  <input id = "satisfied" type="text" name="upper" value="" placeholder="Uber, lyft, postmates" class="about-question"> <br> <br> <br>
   <a class="waves-effect waves-dark btn" id = "about_next_btn" style = "padding-top:.5%;padding-bottom:4%;margin-top:3%;width:10%;color:#FFFFFF;display:block;float:right;background-color:#3d6ab1;font-weight:bold"> Next </a>
   <br><br>
 </form>
@@ -44,15 +44,26 @@ Thank you for participating in this research opportunity! We greatly appreciate 
 <script type="text/javascript">
 
   $("#about_next_btn").click(function(event) {
-   which  = ($("#which")[0]).value
-   long = ($("#long")[0]).value
-   service = ($("#service")[0]).value
-   actively = ($("#actively")[0]).value
-   deactivated = ($("#deactivated")[0]).value
-   pending = ($("#pending")[0]).value
-   satisfied = ($("#satisfied")[0]).value
-   curr_user = parseInt(<%=current_user.id %>)
-   $.ajax({
+
+    var all_questions = document.getElementsByClassName("about-question");
+    for (i = 0; i < all_questions.length; i++) {
+      question = all_questions[i];
+      if (question.value === "") {
+        alert("All fields are required.");
+        return -1;
+      }
+    }
+
+
+    which  = ($("#which")[0]).value
+    long = ($("#long")[0]).value
+    service = ($("#service")[0]).value
+    actively = ($("#actively")[0]).value
+    deactivated = ($("#deactivated")[0]).value
+    pending = ($("#pending")[0]).value
+    satisfied = ($("#satisfied")[0]).value
+    curr_user = parseInt(<%=current_user.id %>)
+    $.ajax({
      url: "/abouts?participant_id="+ curr_user + "&which=" + which + "&long="+long+"&service="+service+"&actively="+actively+"&deactivated="+deactivated+"&pending="+pending+"&satisified="+satisfied,
      type: "post",
      success: function(){
@@ -62,10 +73,10 @@ Thank you for participating in this research opportunity! We greatly appreciate 
      error:function($xhr){
        console.log($xhr);
      }
-   });
-  });
+    });
+    });
 
 
 </script>
-
+<br><br>
 </div>
